test: migrate to Junit6
Closes: MODDATAIMP-1317